Closed Bug 1121430 Opened 10 years ago Closed 10 years ago

Backspace doesn't work any more

Categories

(Firefox for Android Graveyard :: Keyboards and IME, defect)

Other
Android
defect
Not set
normal

Tracking

(firefox37+ fixed, firefox38 fixed, fennec37+)

VERIFIED FIXED
Firefox 38
Tracking Status
firefox37 + fixed
firefox38 --- fixed
fennec 37+ ---

People

(Reporter: kats, Assigned: kats)

References

Details

(Keywords: regression)

Attachments

(1 file)

In today's nightly using the default Google keyboard on a nexus4 the backspace key doesn't work. Also on this keyboard i have the option enabled to allow swype-like word entry by sliding through the letters and usually the keyboard auto-inserts spaces between each word but that's not happening today.
I'm hoping QA can reproduce and get a regression window
No issues over here on my Nexus 6 (5.0.1), trunk (01/14). I ran through both content and our address bar and could not reproduce. The default keyboard in Lollipop has the gesture input enabled by default and it provided a gap between words by default. WFM. If this is truly reproducible it should be simple enough for the reporter to help out finding a range. You will need 0.31 based on the new APK directory layout on our FTP: https://pypi.python.org/pypi/mozregression/0.31
Regression range on m-c: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=286e1f883fdb&tochange=643589c3ef94 I'll bisect inbound; there's a few IME patches by jim in there that look likely.
Kind of surprising since I suspected bug 1112212 but I double-checked that the build at https://hg.mozilla.org/integration/mozilla-inbound/rev/3cfe8379a8a5 doesn't show the problem.
tracking-fennec: --- → ?
Any idea how bug 1103036 might have affected keyboard input in Fennec? As far as I know the ContentChild/ContentParent stuff isn't even used in Fennec...
Flags: needinfo?(wmccloskey)
Flags: needinfo?(nchen)
I don't know much about Fennec, but that seems really surprising. Jim would know, but unfortunately he's on vacation for a while.
Flags: needinfo?(wmccloskey)
(In reply to Bill McCloskey (:billm) from comment #7) > I don't know much about Fennec, but that seems really surprising. Jim would > know, but unfortunately he's on vacation for a while. For a long while. Kats - If you're confident a backout fixes this problem, we should be considering it.
(In reply to Mark Finkle (:mfinkle) from comment #8) > Kats - If you're confident a backout fixes this problem, we should be > considering it. If you do back it out, you'll probably also have to back out bug 1121263, bug 1087613, bug 1083897 and bug 1091766, because I'm pretty sure all of the e10s leak checking stuff depends on it.
So I was also very surprised that the bisection pointed to bug 1103036 instead of bug 1112212, and so I did a try push [1] at cset 3cfe8379a8a5 to get a clobber-build and re-verify. And that build *does* manifest the problem. And then I triple-checked the inbound build for 3cfe8379a8a5 [2] and it *also* manifests the problem. So I don't know what I checked and double-checked before but it was likely not the right build. I also triple-checked cset ab841f36d62f and that does not have the problem, so the regression is actually from bug 1112212 and the world makes sense again. Sorry for the screwup! [1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=977fdfe1b633 [2] http://ftp.mozilla.org/pub/mozilla.org/mobile/tinderbox-builds/mozilla-inbound-android-api-11/1420911932/
Blocks: 1112212
No longer blocks: 1103036
Try push at https://treeherder.mozilla.org/#/jobs?repo=try&revision=6aad8c1ee2d4 which I'll verify fixes the problem before I land.
Assignee: nobody → bugmail.mozilla
Attachment #8549625 - Flags: review+
The try build with this backout patch fixes the problem, so I landed the backout: https://hg.mozilla.org/integration/mozilla-inbound/rev/a220d54c8c14 I had to rebase around cset e1dd58a149d2 which just landed on inbound; hopefully I didn't screw that up.
Comment on attachment 8549625 [details] [diff] [review] Backout of bug 1112212 Approval Request Comment [Feature/regressing bug #]: bug 1112212 [User impact if declined]: on some devices/keyboards it's impossible to delete text in a text field or textarea using the backspace key. [Describe test coverage new/current, TBPL]: local testing only so far [Risks and why]: is a backout of a relatively recent landing so it should be low risk and will restore the bugs it was fixing (which are less severe than the regression) [String/UUID change made/needed]: none
Attachment #8549625 - Flags: approval-mozilla-aurora?
tracking-fennec: ? → 37+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Flags: needinfo?(nchen)
Verified on 2015-01-16 nightly.
Status: RESOLVED → VERIFIED
Comment on attachment 8549625 [details] [diff] [review] Backout of bug 1112212 Aurora+ for the backout.
Attachment #8549625 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Keywords: qawanted
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: