Bug 1121430 - Back out 4 csets from bug 1112212 for breaking backspace on Android. a=lmandel